fixed margin overflow issue

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,6 +12,10 @@
     color: rgba(255, 255, 255, 0.95);
   }
 
+  div {
+    overflow: auto;
+  }
+
   h1 {
     margin-top: 200px;
   }
